# avalanche-forcast

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.railway  RAILWAY_DEPLOYMENT.md  README.md  allData.csv  all_weather_data.csv  app.py  config.env.example  config.production.env  deploy.sh  docker-compose.yml  full_avalanche_weather_w_lag.csv  health-check.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  start-railway.sh  start.bat  start.sh  wsgi.py
data/: avalances_clean_lat_long.csv  avalanches_all.csv  avalanches_cleaning.R  avalanches_lat_long.csv  avalanches_slc_clean_allareas.csv  hac_out.txt  kmeans_many_per_location.txt  kmeans_one_per_location.txt  mlp_out.txt  mlp_out_square.txt
preprocess/: kmeans-locations.py
process/: use-hac.py  use-mlp.py  use-reg.py
scraper/: lat_long_pinger.py  merge_new_data.py  merge_weather_data.py  merger.py  out.csv  scaper.py  scraper_improved.py  weather_fetcher_openmeteo.py
templates/: index.html
