[project]
name = "avalanche-forecast"
version = "1.0.0"
description = "A modern web application for avalanche risk prediction using machine learning models"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "flask>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "folium>=0.14.0",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.4",
    "geopy>=2.4.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
avalanche-forecast = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
